# kumo

./: Cargo.toml  README.md  build.sh  rust-toolchain.toml  sc8280xp-lenovo-thinkpad-x13s.dtb
boot/niji-loader/: Cargo.toml
boot/niji-loader/src/: elf.rs  lib.rs
boot/niji-raw-aarch64/qemu-virt/: README.md  link.ld  stage_a.S
boot/niji-uefi/: Cargo.toml
boot/niji-uefi/src/: lib.rs  main.rs
hal/kumo-hal/: Cargo.toml
hal/kumo-hal-aarch64/: Cargo.toml
hal/kumo-hal-aarch64/src/: cjk_font.rs  lib.rs  smmuv3.rs
hal/kumo-hal-x86_64/: Cargo.toml
hal/kumo-hal-x86_64/src/: lib.rs
hal/kumo-hal/src/: lib.rs
imager/: Cargo.toml
imager/src/: lib.rs  main.rs
kernel/: Cargo.toml  build.rs  kumo-kernel-x86.ld  kumo-kernel.ld
kernel/src/: ipc.rs  ipcdemo.rs  kdemo.rs  lib.rs  main.rs  object.rs  sched.rs  shell.rs  syscall.rs  task.rs  tower.rs  user_thread.rs  usermode.rs
kernel/src/bootstrap/: console.rs  mod.rs  user.rs
kernel/src/cap/: interrupt.rs  mod.rs  resource.rs
kernel/src/mm/: heap.rs  mod.rs
lib/kumo-abi/: Cargo.toml
lib/kumo-abi/src/: argv.rs  boot.rs  i2c.rs  initrd.rs  lib.rs  object.rs  sys.rs
lib/kumo-fatfs/: Cargo.toml
lib/kumo-fatfs/src/: lib.rs
lib/kumo-geni-i2c/: Cargo.toml
lib/kumo-geni-i2c/src/: geni.rs  lib.rs
lib/kumo-hid/: Cargo.toml
lib/kumo-hid/src/: lib.rs
lib/kumo-i2c-hid/: Cargo.toml
lib/kumo-i2c-hid/src/: fdt.rs  geni.rs  lib.rs  protocol.rs  report_descriptor.rs  tlmm.rs
lib/kumo-ipc/: Cargo.toml
lib/kumo-ipc/src/: lib.rs
lib/kumo-pdc/: Cargo.toml
lib/kumo-pdc/src/: lib.rs
lib/kumo-vfs/: Cargo.toml
lib/kumo-vfs/src/: lib.rs
lib/kumo-xhci/: Cargo.toml
lib/kumo-xhci/src/: context.rs  lib.rs  ring.rs  trb.rs
scripts/: gen-cjk-font.py  mk-pi5-img.sh  mkiso.sh  pack.sh  preflight.sh  revert.sh  run-qemu.sh  x86-multiboot.sh
targets/: aarch64-kumo-none.json  x86_64-kumo-none.json
targets/hardware/: thinkpad-x13s-gen1.md
tools/stage-a-smoke/: Cargo.toml
tools/stage-a-smoke/src/: main.rs
userland/args/: Cargo.toml
userland/args/src/: main.rs
userland/cat/: Cargo.toml
userland/cat/src/: main.rs
userland/hello/: Cargo.toml
userland/hello/src/: main.rs
userland/i2cdetect/: Cargo.toml
userland/i2cdetect/src/: main.rs
userland/kumo-rt/: Cargo.toml
userland/kumo-rt/src/: heap.rs  lib.rs  sys.rs
userland/kumoza/: Cargo.toml
userland/kumoza/src/: lib.rs
userland/ls/: Cargo.toml
userland/ls/src/: main.rs
userland/lua-repl/: Cargo.toml
userland/lua-repl/src/: main.rs
userland/persona-linux/: Cargo.toml
userland/persona-linux/src/: lib.rs
userland/persona-posix/: Cargo.toml
userland/persona-posix/src/: lib.rs
userland/servers/: README.md
userland/servers/drv-blk/: Cargo.toml
userland/servers/drv-blk/src/: lib.rs  main.rs
userland/servers/drv-fb/: Cargo.toml
userland/servers/drv-fb/src/: lib.rs  main.rs
userland/servers/drv-geni-i2c/: Cargo.toml
userland/servers/drv-geni-i2c/src/: lib.rs  main.rs
userland/servers/drv-i2c-hid/: Cargo.toml
userland/servers/drv-i2c-hid/src/: lib.rs  main.rs
userland/servers/drv-serial/: Cargo.toml
userland/servers/drv-serial/src/: main.rs
userland/servers/fatfs/: Cargo.toml
userland/servers/fatfs/src/: lib.rs
userland/servers/svc-health/: Cargo.toml
userland/servers/svc-health/src/: lib.rs  main.rs
userland/servers/ttyd/: Cargo.toml
userland/servers/ttyd/src/: lib.rs  main.rs
userland/sora/: Cargo.toml
userland/sora/src/: heap.rs  lib.rs  main.rs
userland/wc/: Cargo.toml
userland/wc/src/: lib.rs  main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
