[package]
name = "kernel"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
build = "build.rs"

[features]
default = ["arch_aarch64"]
arch_aarch64 = ["kumo-hal/arch_aarch64"]
arch_x86_64 = ["kumo-hal/arch_x86_64"]

[dependencies]
kumo-abi.workspace = true
kumo-hal = { workspace = true, default-features = false }
kumo-ipc.workspace = true
niji-loader = { path = "../boot/niji-loader" }

[lib]
path = "src/lib.rs"

[[bin]]
name = "kumo-kernel"
path = "src/main.rs"
