[package]
name = "kumo-hal-aarch64"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
# Vendored, no_std-patched QR generator for the on-screen TOWER diagnostic (see vendor/).
qrcodegen = { path = "../../vendor/qrcodegen" }
