[package]
name = "kumo-hal"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
default = ["arch_aarch64"]
arch_aarch64 = ["dep:kumo-hal-aarch64"]
arch_x86_64 = ["dep:kumo-hal-x86_64"]

[dependencies]
kumo-hal-aarch64 = { workspace = true, optional = true }
kumo-hal-x86_64 = { workspace = true, optional = true }

[lib]
path = "src/lib.rs"
