[package]
name = "cat"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

# Runtime deps gated to the image target (aarch64), like the other native bins:
# the bin is built for aarch64-unknown-none by `cargo xtask image`.
[target.'cfg(target_arch = "aarch64")'.dependencies]
kumo-rt = { path = "../kumo-rt" }
kumo-abi.workspace = true

[[bin]]
name = "cat"
path = "src/main.rs"
test = false
bench = false
doctest = false
