[package]
name = "hello"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

# Runtime deps gated to the image target (aarch64), like the server bins: the bin
# is only ever built for aarch64-unknown-none via `cargo xtask image`.
[target.'cfg(target_arch = "aarch64")'.dependencies]
kumo-rt = { path = "../kumo-rt" }

[[bin]]
name = "hello"
path = "src/main.rs"
test = false
bench = false
doctest = false
