[package]
name = "sora"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
drv-blk = { path = "../servers/drv-blk" }
kumo-abi.workspace = true
kumo-fatfs = { path = "../../lib/kumo-fatfs" }
kumo-ipc.workspace = true
kumo-rt = { path = "../kumo-rt" }
kumoza = { path = "../kumoza" }
linked_list_allocator = "0.10.6"
persona-linux = { path = "../persona-linux" }
persona-posix = { path = "../persona-posix" }
svc-health = { path = "../servers/svc-health" }
ttyd = { path = "../servers/ttyd" }

[lib]
path = "src/lib.rs"

[[bin]]
name = "sora"
path = "src/main.rs"
# Freestanding (no_std/no_main, own panic handler): not host-testable, so keep it out of
# `cargo test --workspace` (which would otherwise build a std test harness for the bin and
# hit a duplicate `panic_impl` lang item). Sora is built for aarch64-unknown-none.
test = false
bench = false
doctest = false
