[package]
name = "sora"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
drv-blk = { path = "../servers/drv-blk" }
drv-geni-i2c = { path = "../servers/drv-geni-i2c" }
drv-i2c-hid = { path = "../servers/drv-i2c-hid" }
kumo-abi.workspace = true
kumo-fatfs = { path = "../../lib/kumo-fatfs" }
kumo-i2c-hid = { path = "../../lib/kumo-i2c-hid" }
kumo-ipc.workspace = true
kumo-rt = { path = "../kumo-rt" }
kumoza = { path = "../kumoza" }
linked_list_allocator = "0.10.6"
persona-linux = { path = "../persona-linux" }
persona-posix = { path = "../persona-posix" }
svc-health = { path = "../servers/svc-health" }
ttyd = { path = "../servers/ttyd" }

[lib]
path = "src/lib.rs"

[[bin]]
name = "sora"
path = "src/main.rs"
# Freestanding (no_std/no_main, own panic handler): not host-testable, so keep it out of
# `cargo test --workspace` (which would otherwise build a std test harness for the bin and
# hit a duplicate `panic_impl` lang item). Sora is built for aarch64-unknown-none.
test = false
bench = false
doctest = false
