[package]
name = "wc"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

# The counting core is a pure `no_std` lib so it is host-tested (`cargo test -p wc`); the bin
# is only I/O glue.
[lib]
name = "wc"
path = "src/lib.rs"
test = true
doctest = false

# Runtime deps gated to the image target (aarch64), like the other native bins: the bin is
# built for aarch64-unknown-none by `cargo xtask image`.
[target.'cfg(target_arch = "aarch64")'.dependencies]
kumo-rt = { path = "../kumo-rt" }
kumo-abi.workspace = true

[[bin]]
name = "wc"
path = "src/main.rs"
test = false
bench = false
doctest = false
