[package]
name = "drv-blk"
version = "0.1.0"
edition = "2021"

[lib]
name = "drv_blk"
path = "src/lib.rs"
test = true
doctest = false

[[bin]]
name = "drv-blk"
path = "src/main.rs"
test = false
bench = false
doctest = false

# Gated to aarch64 (the image target) so `cargo test -p drv-blk` exercises the pure
# block-device logic on host without dragging in the runtime.
[target.'cfg(target_arch = "aarch64")'.dependencies]
kumo-rt = { path = "../../kumo-rt" }
kumo-abi = { path = "../../../lib/kumo-abi" }
