[package]
name = "drv-geni-i2c"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
name = "drv_geni_i2c"
path = "src/lib.rs"

[[bin]]
name = "drv-geni-i2c"
path = "src/main.rs"
test = false
bench = false
doctest = false


[dependencies]
kumo-abi.workspace = true
kumo-geni-i2c = { path = "../../../lib/kumo-geni-i2c" }

[target.'cfg(target_arch = "aarch64")'.dependencies]
kumo-rt = { path = "../../kumo-rt" }
