[package]
name = "drv-i2c-hid"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
name = "drv_i2c_hid"
path = "src/lib.rs"
test = true
doctest = false

[[bin]]
name = "drv-i2c-hid"
path = "src/main.rs"
test = false
bench = false
doctest = false

[dependencies]
kumo-abi.workspace = true
kumo-hid = { path = "../../../lib/kumo-hid" }
kumo-i2c-hid = { path = "../../../lib/kumo-i2c-hid" }

[target.'cfg(target_arch = "aarch64")'.dependencies]
kumo-rt = { path = "../../kumo-rt" }
