[package]
name = "ttyd"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"
test = true
doctest = false

[[bin]]
name = "ttyd"
path = "src/main.rs"
test = false
bench = false
doctest = false

[target.'cfg(target_arch = "aarch64")'.dependencies]
kumo-abi.workspace = true
kumo-rt = { path = "../../kumo-rt" }
